--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -267,7 +267,7 @@
         margin: 0;
         padding: 0;
         transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
-        z-index: 1999;
+        z-index: 20000;
         border-left: 1px solid rgba(255, 255, 255, 0.05);
     }
 
